Fix overflow on about

--- a/src/pages/aboutPage/style.css
+++ b/src/pages/aboutPage/style.css
@@ -10,7 +10,7 @@
 }
 
 .aboutPage h1 {
-  margin-top: 10%;
+  margin-top: 200px;
   font-size: 52px;
   color: var(--pink);
 }
